sctlprov2/parser_yacc.output
   0  $accept : %entry% $end

   1  program : imported declars EOF
   2          | imported declars kripke EOF

   3  imported :
   4           | imported Import UIden

   5  declars :
   6          | declars Datatype Iden type_args Equal typ
   7          | declars Var Iden Equal expr_single
   8          | declars Var Iden type_of_expr Equal expr_single
   9          | declars Val Iden Equal expr_single
  10          | declars Val Iden type_of_expr Equal expr_single
  11          | declars Function Iden args Equal expr
  12          | declars Function Iden args type_of_expr Equal expr

  13  type_args :
  14            | Iden type_args

  15  type_of_expr : Colon typ

  16  args : pattern
  17       | pattern args

  18  kripke : Model LB3 Init Equal expr Semicolon Transition pattern Equal expr Semicolon list_property RB3

  19  list_property :
  20                | property list_property

  21  property : Property Iden Equal formula

  22  formula : Top
  23          | Bottom
  24          | Iden list_expr
  25          | Neg formula
  26          | formula And formula
  27          | formula Or formula
  28          | AX LB1 Iden Comma formula Comma expr RB1
  29          | EX LB1 Iden Comma formula Comma expr RB1
  30          | AF LB1 Iden Comma formula Comma expr RB1
  31          | EG LB1 Iden Comma formula Comma expr RB1
  32          | AR LB1 Iden Comma Iden Comma formula Comma formula Comma expr RB1
  33          | EU LB1 Iden Comma Iden Comma formula Comma formula Comma expr RB1

  34  list_expr :
  35            | expr_single list_expr

  36  constrs : constr
  37          | constr Vertical constrs

  38  constr : UIden
  39         | UIden typ

  40  typ : TInt
  41      | TBool
  42      | TFloat
  43      | TUnt
  44      | TAray typ
  45      | TLst typ
  46      | Iden
  47      | Iden udt_args
  48      | constrs
  49      | LB1 tuple_typ RB1
  50      | record_typ
  51      | typ Arrow typ
  52      | LB1 typ RB1

  53  udt_args : typ
  54           | LB1 comma_udt_args RB1

  55  comma_udt_args : typ Comma typ
  56                 | typ Comma comma_udt_args

  57  tuple_typ : typ Comma typ
  58            | typ Comma tuple_typ

  59  record_typ : LB3 str_typs RB3

  60  str_typs : str_typ
  61           | str_typ str_typs

  62  str_typ : Iden Colon typ Semicolon

  63  expr : expr_single
  64       | expr_seq

  65  expr_seq : expr_single Semicolon expr_single
  66           | expr_single Semicolon expr_seq

  67  expr_single : Iden
  68              | Iden Dot expr_single
  69              | UIden Dot expr_single
  70              | Int
  71              | Float
  72              | LB1 RB1
  73              | LB2 Vertical expr_single_list Vertical RB2
  74              | LB2 expr_single_list RB2
  75              | True
  76              | False
  77              | LB1 expr Comma nonempty_single_expr_list_comma RB1
  78              | LB3 str_expr_list RB3
  79              | Negb expr_single
  80              | expr_single Ando expr_single
  81              | expr_single Oro expr_single
  82              | Minus expr_single
  83              | MinusDot expr_single
  84              | expr_single Add expr_single
  85              | expr_single Minus expr_single
  86              | expr_single Mult expr_single
  87              | expr_single AddDot expr_single
  88              | expr_single MinusDot expr_single
  89              | expr_single MultDot expr_single
  90              | expr_single Equal expr_single
  91              | expr_single Non_Equal expr_single
  92              | expr_single LT expr_single
  93              | expr_single GT expr_single
  94              | expr_single LE expr_single
  95              | expr_single GE expr_single
  96              | If expr_single Then expr
  97              | If expr_single Then expr else_expr
  98              | While expr_single Do expr Done
  99              | For Iden In LB2 expr_single DotDot expr_single RB2 Do expr Done
 100              | expr_single LArrow expr_single
 101              | Match expr_single With pattern_expr_list
 102              | expr_single With LB3 str_expr_list RB3
 103              | UIden
 104              | UIden expr_single
 105              | Iden nonempty_single_expr_list
 106              | Val Iden Equal expr_single
 107              | Var Iden Equal expr_single
 108              | expr_single LB2 expr_single RB2
 109              | LB1 expr_single RB1

 110  nonempty_single_expr_list_comma : expr_single
 111                                  | expr_single Comma nonempty_single_expr_list_comma

 112  nonempty_single_expr_list : expr_single
 113                            | expr_single nonempty_single_expr_list

 114  expr_single_list :
 115                   | expr_single
 116                   | expr_single Semicolon expr_single_list

 117  str_expr_list :
 118                | Iden Equal expr Semicolon
 119                | str_expr_list Iden Equal expr Semicolon

 120  else_expr : Else expr

 121  pattern_expr_list : Vertical pattern_expr
 122                    | pattern_expr_list Vertical pattern_expr

 123  pattern_expr : pattern Arrow expr

 124  pattern : Iden
 125          | Int
 126          | Float
 127          | LB1 RB1
 128          | LB2 Vertical pattern_list Vertical RB2
 129          | LB2 RB2
 130          | LB2 pattern_list RB2
 131          | pattern ColonColon pattern
 132          | Underline
 133          | LB1 pattern Comma nonempty_pattern_list_comma RB1
 134          | UIden
 135          | UIden pattern
 136          | LB1 pattern RB1

 137  nonempty_pattern_list_comma : pattern
 138                              | pattern Comma nonempty_pattern_list_comma

 139  pattern_list : pattern
 140               | pattern Semicolon pattern_list

 141  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (141)
	imported : .  (3)

	.  reduce 3

	program  goto 3
	imported  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (141)

	.  reduce 141


state 4
	program : imported . declars EOF  (1)
	program : imported . declars kripke EOF  (2)
	imported : imported . Import UIden  (4)
	declars : .  (5)

	Import  shift 5
	Datatype  reduce 5
	Val  reduce 5
	Var  reduce 5
	Model  reduce 5
	EOF  reduce 5
	Function  reduce 5

	declars  goto 6


state 5
	imported : imported Import . UIden  (4)

	UIden  shift 7
	.  error


state 6
	program : imported declars . EOF  (1)
	program : imported declars . kripke EOF  (2)
	declars : declars . Datatype Iden type_args Equal typ  (6)
	declars : declars . Var Iden Equal expr_single  (7)
	declars : declars . Var Iden type_of_expr Equal expr_single  (8)
	declars : declars . Val Iden Equal expr_single  (9)
	declars : declars . Val Iden type_of_expr Equal expr_single  (10)
	declars : declars . Function Iden args Equal expr  (11)
	declars : declars . Function Iden args type_of_expr Equal expr  (12)

	Datatype  shift 8
	Val  shift 9
	Var  shift 10
	Model  shift 11
	EOF  shift 12
	Function  shift 13
	.  error

	kripke  goto 14


state 7
	imported : imported Import UIden .  (4)

	.  reduce 4


state 8
	declars : declars Datatype . Iden type_args Equal typ  (6)

	Iden  shift 15
	.  error


state 9
	declars : declars Val . Iden Equal expr_single  (9)
	declars : declars Val . Iden type_of_expr Equal expr_single  (10)

	Iden  shift 16
	.  error


state 10
	declars : declars Var . Iden Equal expr_single  (7)
	declars : declars Var . Iden type_of_expr Equal expr_single  (8)

	Iden  shift 17
	.  error


state 11
	kripke : Model . LB3 Init Equal expr Semicolon Transition pattern Equal expr Semicolon list_property RB3  (18)

	LB3  shift 18
	.  error


state 12
	program : imported declars EOF .  (1)

	.  reduce 1


state 13
	declars : declars Function . Iden args Equal expr  (11)
	declars : declars Function . Iden args type_of_expr Equal expr  (12)

	Iden  shift 19
	.  error


state 14
	program : imported declars kripke . EOF  (2)

	EOF  shift 20
	.  error


state 15
	declars : declars Datatype Iden . type_args Equal typ  (6)
	type_args : .  (13)

	Iden  shift 21
	Equal  reduce 13

	type_args  goto 22


state 16
	declars : declars Val Iden . Equal expr_single  (9)
	declars : declars Val Iden . type_of_expr Equal expr_single  (10)

	Equal  shift 23
	Colon  shift 24
	.  error

	type_of_expr  goto 25


state 17
	declars : declars Var Iden . Equal expr_single  (7)
	declars : declars Var Iden . type_of_expr Equal expr_single  (8)

	Equal  shift 26
	Colon  shift 24
	.  error

	type_of_expr  goto 27


state 18
	kripke : Model LB3 . Init Equal expr Semicolon Transition pattern Equal expr Semicolon list_property RB3  (18)

	Init  shift 28
	.  error


state 19
	declars : declars Function Iden . args Equal expr  (11)
	declars : declars Function Iden . args type_of_expr Equal expr  (12)

	Int  shift 29
	Float  shift 30
	Iden  shift 31
	UIden  shift 32
	Underline  shift 33
	LB1  shift 34
	LB2  shift 35
	.  error

	args  goto 36
	pattern  goto 37


state 20
	program : imported declars kripke EOF .  (2)

	.  reduce 2


state 21
	type_args : Iden . type_args  (14)
	type_args : .  (13)

	Iden  shift 21
	Equal  reduce 13

	type_args  goto 38


state 22
	declars : declars Datatype Iden type_args . Equal typ  (6)

	Equal  shift 39
	.  error


state 23
	declars : declars Val Iden Equal . expr_single  (9)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 58


state 24
	type_of_expr : Colon . typ  (15)

	Iden  shift 59
	UIden  shift 60
	LB1  shift 61
	LB3  shift 62
	TLst  shift 63
	TFloat  shift 64
	TAray  shift 65
	TInt  shift 66
	TBool  shift 67
	TUnt  shift 68
	.  error

	typ  goto 69
	constrs  goto 70
	constr  goto 71
	record_typ  goto 72


state 25
	declars : declars Val Iden type_of_expr . Equal expr_single  (10)

	Equal  shift 73
	.  error


state 26
	declars : declars Var Iden Equal . expr_single  (7)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 74


state 27
	declars : declars Var Iden type_of_expr . Equal expr_single  (8)

	Equal  shift 75
	.  error


state 28
	kripke : Model LB3 Init . Equal expr Semicolon Transition pattern Equal expr Semicolon list_property RB3  (18)

	Equal  shift 76
	.  error


state 29
	pattern : Int .  (125)

	.  reduce 125


state 30
	pattern : Float .  (126)

	.  reduce 126


state 31
	pattern : Iden .  (124)

	.  reduce 124


32: shift/reduce conflict (shift 29, reduce 134) on Int
32: shift/reduce conflict (shift 30, reduce 134) on Float
32: shift/reduce conflict (shift 31, reduce 134) on Iden
32: shift/reduce conflict (shift 32, reduce 134) on UIden
32: shift/reduce conflict (shift 33, reduce 134) on Underline
32: shift/reduce conflict (shift 34, reduce 134) on LB1
32: shift/reduce conflict (shift 35, reduce 134) on LB2
state 32
	pattern : UIden .  (134)
	pattern : UIden . pattern  (135)

	Int  shift 29
	Float  shift 30
	Iden  shift 31
	UIden  shift 32
	Underline  shift 33
	LB1  shift 34
	LB2  shift 35
	Vertical  reduce 134
	RB1  reduce 134
	RB2  reduce 134
	Equal  reduce 134
	Comma  reduce 134
	Semicolon  reduce 134
	Arrow  reduce 134
	Colon  reduce 134
	ColonColon  reduce 134

	pattern  goto 77


state 33
	pattern : Underline .  (132)

	.  reduce 132


state 34
	pattern : LB1 . RB1  (127)
	pattern : LB1 . pattern Comma nonempty_pattern_list_comma RB1  (133)
	pattern : LB1 . pattern RB1  (136)

	Int  shift 29
	Float  shift 30
	Iden  shift 31
	UIden  shift 32
	Underline  shift 33
	LB1  shift 34
	RB1  shift 78
	LB2  shift 35
	.  error

	pattern  goto 79


state 35
	pattern : LB2 . Vertical pattern_list Vertical RB2  (128)
	pattern : LB2 . RB2  (129)
	pattern : LB2 . pattern_list RB2  (130)

	Int  shift 29
	Float  shift 30
	Iden  shift 31
	UIden  shift 32
	Vertical  shift 80
	Underline  shift 33
	LB1  shift 34
	LB2  shift 35
	RB2  shift 81
	.  error

	pattern  goto 82
	pattern_list  goto 83


state 36
	declars : declars Function Iden args . Equal expr  (11)
	declars : declars Function Iden args . type_of_expr Equal expr  (12)

	Equal  shift 84
	Colon  shift 24
	.  error

	type_of_expr  goto 85


state 37
	args : pattern .  (16)
	args : pattern . args  (17)
	pattern : pattern . ColonColon pattern  (131)

	Int  shift 29
	Float  shift 30
	Iden  shift 31
	UIden  shift 32
	Underline  shift 33
	LB1  shift 34
	LB2  shift 35
	ColonColon  shift 86
	Equal  reduce 16
	Colon  reduce 16

	args  goto 87
	pattern  goto 37


state 38
	type_args : Iden type_args .  (14)

	.  reduce 14


state 39
	declars : declars Datatype Iden type_args Equal . typ  (6)

	Iden  shift 59
	UIden  shift 60
	LB1  shift 61
	LB3  shift 62
	TLst  shift 63
	TFloat  shift 64
	TAray  shift 65
	TInt  shift 66
	TBool  shift 67
	TUnt  shift 68
	.  error

	typ  goto 88
	constrs  goto 70
	constr  goto 71
	record_typ  goto 72


state 40
	expr_single : Int .  (70)

	.  reduce 70


state 41
	expr_single : Float .  (71)

	.  reduce 71


42: shift/reduce conflict (shift 40, reduce 67) on Int
42: shift/reduce conflict (shift 41, reduce 67) on Float
42: shift/reduce conflict (shift 42, reduce 67) on Iden
42: shift/reduce conflict (shift 43, reduce 67) on UIden
42: shift/reduce conflict (shift 44, reduce 67) on Val
42: shift/reduce conflict (shift 45, reduce 67) on Var
42: shift/reduce conflict (shift 46, reduce 67) on Match
42: shift/reduce conflict (shift 47, reduce 67) on If
42: shift/reduce conflict (shift 48, reduce 67) on For
42: shift/reduce conflict (shift 49, reduce 67) on While
42: shift/reduce conflict (shift 50, reduce 67) on LB1
42: shift/reduce conflict (shift 51, reduce 67) on LB2
42: shift/reduce conflict (shift 52, reduce 67) on LB3
42: shift/reduce conflict (shift 53, reduce 67) on Minus
42: shift/reduce conflict (shift 54, reduce 67) on MinusDot
42: shift/reduce conflict (shift 55, reduce 67) on Negb
42: shift/reduce conflict (shift 56, reduce 67) on True
42: shift/reduce conflict (shift 57, reduce 67) on False
state 42
	expr_single : Iden .  (67)
	expr_single : Iden . Dot expr_single  (68)
	expr_single : Iden . nonempty_single_expr_list  (105)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Dot  shift 89
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	Datatype  reduce 67
	Vertical  reduce 67
	With  reduce 67
	Model  reduce 67
	Property  reduce 67
	Then  reduce 67
	Else  reduce 67
	Do  reduce 67
	Done  reduce 67
	RB1  reduce 67
	RB2  reduce 67
	RB3  reduce 67
	Equal  reduce 67
	Non_Equal  reduce 67
	LT  reduce 67
	GT  reduce 67
	LE  reduce 67
	GE  reduce 67
	Comma  reduce 67
	Semicolon  reduce 67
	DotDot  reduce 67
	EOF  reduce 67
	Add  reduce 67
	AddDot  reduce 67
	Mult  reduce 67
	MultDot  reduce 67
	Ando  reduce 67
	Oro  reduce 67
	And  reduce 67
	Or  reduce 67
	LArrow  reduce 67
	Function  reduce 67

	expr_single  goto 90
	nonempty_single_expr_list  goto 91


43: shift/reduce conflict (shift 40, reduce 103) on Int
43: shift/reduce conflict (shift 41, reduce 103) on Float
43: shift/reduce conflict (shift 42, reduce 103) on Iden
43: shift/reduce conflict (shift 43, reduce 103) on UIden
43: shift/reduce conflict (shift 44, reduce 103) on Val
43: shift/reduce conflict (shift 45, reduce 103) on Var
43: shift/reduce conflict (shift 46, reduce 103) on Match
43: shift/reduce conflict (shift 47, reduce 103) on If
43: shift/reduce conflict (shift 48, reduce 103) on For
43: shift/reduce conflict (shift 49, reduce 103) on While
43: shift/reduce conflict (shift 50, reduce 103) on LB1
43: shift/reduce conflict (shift 51, reduce 103) on LB2
43: shift/reduce conflict (shift 52, reduce 103) on LB3
43: shift/reduce conflict (shift 53, reduce 103) on Minus
43: shift/reduce conflict (shift 54, reduce 103) on MinusDot
43: shift/reduce conflict (shift 55, reduce 103) on Negb
43: shift/reduce conflict (shift 56, reduce 103) on True
43: shift/reduce conflict (shift 57, reduce 103) on False
state 43
	expr_single : UIden . Dot expr_single  (69)
	expr_single : UIden .  (103)
	expr_single : UIden . expr_single  (104)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Dot  shift 92
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	Datatype  reduce 103
	Vertical  reduce 103
	With  reduce 103
	Model  reduce 103
	Property  reduce 103
	Then  reduce 103
	Else  reduce 103
	Do  reduce 103
	Done  reduce 103
	RB1  reduce 103
	RB2  reduce 103
	RB3  reduce 103
	Equal  reduce 103
	Non_Equal  reduce 103
	LT  reduce 103
	GT  reduce 103
	LE  reduce 103
	GE  reduce 103
	Comma  reduce 103
	Semicolon  reduce 103
	DotDot  reduce 103
	EOF  reduce 103
	Add  reduce 103
	AddDot  reduce 103
	Mult  reduce 103
	MultDot  reduce 103
	Ando  reduce 103
	Oro  reduce 103
	And  reduce 103
	Or  reduce 103
	LArrow  reduce 103
	Function  reduce 103

	expr_single  goto 93


state 44
	expr_single : Val . Iden Equal expr_single  (106)

	Iden  shift 94
	.  error


state 45
	expr_single : Var . Iden Equal expr_single  (107)

	Iden  shift 95
	.  error


state 46
	expr_single : Match . expr_single With pattern_expr_list  (101)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 96


state 47
	expr_single : If . expr_single Then expr  (96)
	expr_single : If . expr_single Then expr else_expr  (97)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 97


state 48
	expr_single : For . Iden In LB2 expr_single DotDot expr_single RB2 Do expr Done  (99)

	Iden  shift 98
	.  error


state 49
	expr_single : While . expr_single Do expr Done  (98)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 99


state 50
	expr_single : LB1 . RB1  (72)
	expr_single : LB1 . expr Comma nonempty_single_expr_list_comma RB1  (77)
	expr_single : LB1 . expr_single RB1  (109)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	RB1  shift 100
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 101
	expr  goto 102
	expr_seq  goto 103


state 51
	expr_single : LB2 . Vertical expr_single_list Vertical RB2  (73)
	expr_single : LB2 . expr_single_list RB2  (74)
	expr_single_list : .  (114)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Vertical  shift 104
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	RB2  reduce 114

	expr_single  goto 105
	expr_single_list  goto 106


52: shift/reduce conflict (shift 107, reduce 117) on Iden
state 52
	expr_single : LB3 . str_expr_list RB3  (78)
	str_expr_list : .  (117)

	Iden  shift 107
	RB3  reduce 117

	str_expr_list  goto 108


state 53
	expr_single : Minus . expr_single  (82)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 109


state 54
	expr_single : MinusDot . expr_single  (83)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 110


state 55
	expr_single : Negb . expr_single  (79)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 111


state 56
	expr_single : True .  (75)

	.  reduce 75


state 57
	expr_single : False .  (76)

	.  reduce 76


state 58
	declars : declars Val Iden Equal expr_single .  (9)
	expr_single : expr_single . Ando expr_single  (80)
	expr_single : expr_single . Oro expr_single  (81)
	expr_single : expr_single . Add expr_single  (84)
	expr_single : expr_single . Minus expr_single  (85)
	expr_single : expr_single . Mult expr_single  (86)
	expr_single : expr_single . AddDot expr_single  (87)
	expr_single : expr_single . MinusDot expr_single  (88)
	expr_single : expr_single . MultDot expr_single  (89)
	expr_single : expr_single . Equal expr_single  (90)
	expr_single : expr_single . Non_Equal expr_single  (91)
	expr_single : expr_single . LT expr_single  (92)
	expr_single : expr_single . GT expr_single  (93)
	expr_single : expr_single . LE expr_single  (94)
	expr_single : expr_single . GE expr_single  (95)
	expr_single : expr_single . LArrow expr_single  (100)
	expr_single : expr_single . With LB3 str_expr_list RB3  (102)
	expr_single : expr_single . LB2 expr_single RB2  (108)

	With  shift 112
	LB2  shift 113
	Equal  shift 114
	Non_Equal  shift 115
	LT  shift 116
	GT  shift 117
	LE  shift 118
	GE  shift 119
	Add  shift 120
	AddDot  shift 121
	Minus  shift 122
	MinusDot  shift 123
	Mult  shift 124
	MultDot  shift 125
	Ando  shift 126
	Oro  shift 127
	LArrow  shift 128
	Datatype  reduce 9
	Val  reduce 9
	Var  reduce 9
	Model  reduce 9
	EOF  reduce 9
	Function  reduce 9


state 59
	typ : Iden .  (46)
	typ : Iden . udt_args  (47)

	Iden  shift 59
	UIden  shift 60
	LB1  shift 129
	LB3  shift 62
	TLst  shift 63
	TFloat  shift 64
	TAray  shift 65
	TInt  shift 66
	TBool  shift 67
	TUnt  shift 68
	Datatype  reduce 46
	Vertical  reduce 46
	Val  reduce 46
	Var  reduce 46
	Model  reduce 46
	RB1  reduce 46
	Equal  reduce 46
	Comma  reduce 46
	Semicolon  reduce 46
	Arrow  reduce 46
	EOF  reduce 46
	Function  reduce 46

	typ  goto 130
	constrs  goto 70
	constr  goto 71
	udt_args  goto 131
	record_typ  goto 72


state 60
	constr : UIden .  (38)
	constr : UIden . typ  (39)

	Iden  shift 59
	UIden  shift 60
	LB1  shift 61
	LB3  shift 62
	TLst  shift 63
	TFloat  shift 64
	TAray  shift 65
	TInt  shift 66
	TBool  shift 67
	TUnt  shift 68
	Datatype  reduce 38
	Vertical  reduce 38
	Val  reduce 38
	Var  reduce 38
	Model  reduce 38
	RB1  reduce 38
	Equal  reduce 38
	Comma  reduce 38
	Semicolon  reduce 38
	Arrow  reduce 38
	EOF  reduce 38
	Function  reduce 38

	typ  goto 132
	constrs  goto 70
	constr  goto 71
	record_typ  goto 72


state 61
	typ : LB1 . tuple_typ RB1  (49)
	typ : LB1 . typ RB1  (52)

	Iden  shift 59
	UIden  shift 60
	LB1  shift 61
	LB3  shift 62
	TLst  shift 63
	TFloat  shift 64
	TAray  shift 65
	TInt  shift 66
	TBool  shift 67
	TUnt  shift 68
	.  error

	typ  goto 133
	constrs  goto 70
	constr  goto 71
	tuple_typ  goto 134
	record_typ  goto 72


state 62
	record_typ : LB3 . str_typs RB3  (59)

	Iden  shift 135
	.  error

	str_typs  goto 136
	str_typ  goto 137


state 63
	typ : TLst . typ  (45)

	Iden  shift 59
	UIden  shift 60
	LB1  shift 61
	LB3  shift 62
	TLst  shift 63
	TFloat  shift 64
	TAray  shift 65
	TInt  shift 66
	TBool  shift 67
	TUnt  shift 68
	.  error

	typ  goto 138
	constrs  goto 70
	constr  goto 71
	record_typ  goto 72


state 64
	typ : TFloat .  (42)

	.  reduce 42


state 65
	typ : TAray . typ  (44)

	Iden  shift 59
	UIden  shift 60
	LB1  shift 61
	LB3  shift 62
	TLst  shift 63
	TFloat  shift 64
	TAray  shift 65
	TInt  shift 66
	TBool  shift 67
	TUnt  shift 68
	.  error

	typ  goto 139
	constrs  goto 70
	constr  goto 71
	record_typ  goto 72


state 66
	typ : TInt .  (40)

	.  reduce 40


state 67
	typ : TBool .  (41)

	.  reduce 41


state 68
	typ : TUnt .  (43)

	.  reduce 43


state 69
	type_of_expr : Colon typ .  (15)
	typ : typ . Arrow typ  (51)

	Arrow  shift 140
	Equal  reduce 15


state 70
	typ : constrs .  (48)

	.  reduce 48


71: shift/reduce conflict (shift 141, reduce 36) on Vertical
state 71
	constrs : constr .  (36)
	constrs : constr . Vertical constrs  (37)

	Vertical  shift 141
	Datatype  reduce 36
	Val  reduce 36
	Var  reduce 36
	Model  reduce 36
	RB1  reduce 36
	Equal  reduce 36
	Comma  reduce 36
	Semicolon  reduce 36
	Arrow  reduce 36
	EOF  reduce 36
	Function  reduce 36


state 72
	typ : record_typ .  (50)

	.  reduce 50


state 73
	declars : declars Val Iden type_of_expr Equal . expr_single  (10)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 142


state 74
	declars : declars Var Iden Equal expr_single .  (7)
	expr_single : expr_single . Ando expr_single  (80)
	expr_single : expr_single . Oro expr_single  (81)
	expr_single : expr_single . Add expr_single  (84)
	expr_single : expr_single . Minus expr_single  (85)
	expr_single : expr_single . Mult expr_single  (86)
	expr_single : expr_single . AddDot expr_single  (87)
	expr_single : expr_single . MinusDot expr_single  (88)
	expr_single : expr_single . MultDot expr_single  (89)
	expr_single : expr_single . Equal expr_single  (90)
	expr_single : expr_single . Non_Equal expr_single  (91)
	expr_single : expr_single . LT expr_single  (92)
	expr_single : expr_single . GT expr_single  (93)
	expr_single : expr_single . LE expr_single  (94)
	expr_single : expr_single . GE expr_single  (95)
	expr_single : expr_single . LArrow expr_single  (100)
	expr_single : expr_single . With LB3 str_expr_list RB3  (102)
	expr_single : expr_single . LB2 expr_single RB2  (108)

	With  shift 112
	LB2  shift 113
	Equal  shift 114
	Non_Equal  shift 115
	LT  shift 116
	GT  shift 117
	LE  shift 118
	GE  shift 119
	Add  shift 120
	AddDot  shift 121
	Minus  shift 122
	MinusDot  shift 123
	Mult  shift 124
	MultDot  shift 125
	Ando  shift 126
	Oro  shift 127
	LArrow  shift 128
	Datatype  reduce 7
	Val  reduce 7
	Var  reduce 7
	Model  reduce 7
	EOF  reduce 7
	Function  reduce 7


state 75
	declars : declars Var Iden type_of_expr Equal . expr_single  (8)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 143


state 76
	kripke : Model LB3 Init Equal . expr Semicolon Transition pattern Equal expr Semicolon list_property RB3  (18)

	Int  shift 40
	Float  shift 41
	Iden  shift 42
	UIden  shift 43
	Val  shift 44
	Var  shift 45
	Match  shift 46
	If  shift 47
	For  shift 48
	While  shift 49
	LB1  shift 50
	LB2  shift 51
	LB3  shift 52
	Minus  shift 53
	MinusDot  shift 54
	Negb  shift 55
	True  shift 56
	False  shift 57
	.  error

	expr_single  goto 144
	expr  goto 145
	expr_seq  goto 103


77: shift/reduce conflict (shift 86, reduce 135) on ColonColon
state 77
	pattern : pattern . ColonColon pattern  (131)
	pattern : UIden pattern .  (135)

	ColonColon  shift 86
	Int  reduce 135
	Float  reduce 135
	Iden  reduce 135
	UIden  reduce 135
	Vertical  reduce 135
	Underline  reduce 135
	LB1  reduce 135
	RB1  reduce 135
	LB2  reduce 135
	RB2  reduce 135
	Equal  reduce 135
	Comma  reduce 135
	Semicolon  reduce 135
	Arrow  reduce 135
	Colon  reduce 135


state 78
	pattern : LB1 RB1 .  (127)

	.  reduce 127


state 79
	pattern : pattern . ColonColon pattern  (131)
	pattern : LB1 pattern . Comma nonempty_pattern_list_comma RB1  (133)
	pattern : LB1 pattern . RB1  (136)

	RB1  shift 146
	Comma  shift 147
	ColonColon  shift 86
	.  error


state 80
	pattern : LB2 Vertical . pattern_list Vertical RB2  (128)

	Int  shift 29
	Float  shift 30
	Iden  shift 31
	UIden  shift 32
	Underline  shift 33
	LB1  shift 34
	LB2  shift 35
	.  error

	pattern  goto 82
	pattern_list  goto 148


state 81
	pattern : LB2 RB2 .  (129)

	.  reduce 129

